Revise External Documentation

--- a/InternetCLafes/.project
+++ b/InternetCLafes/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>InternetCLafes</name>
+	<name>PROJECT_InternetCLafes</name>
 	<comment></comment>
 	<projects>
 	</projects>
